# recipeboxV1

./: README.md  db.sqlite3  db.sqlite3.OLD  pyproject.toml
recipebox/: settings.py  urls.py
recipes/: admin.py  forms.py  models.py  views.py
recipes/migrations/: 0001_initial.py
recipes/static/css/: style.css
templates/: add_author.html  add_recipe.html  author_detail.html  base.html  index.html  login.html  recipe_detail.html  signup.html
